// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Google renders correctly 1`] = `
<DocumentFragment>
  <div
    class="rc-google google-picker"
    style="width: 652px; background: rgb(255, 255, 255); border: 1px solid rgb(223, 225, 229); box-sizing: initial; display: flex; flex-wrap: wrap; -webkit-border-radius: 8px 8px 0px 0px; border-radius: 8px 8px 0px 0px;"
  >
    <div
      style="height: 57px; width: 100%; padding-top: 16px; padding-bottom: 16px; padding-left: 16px; font-size: 20px; box-sizing: border-box; font-family: Roboto-Regular, HelveticaNeue, Arial, sans-serif;"
    >
      Color picker
    </div>
    <div
      style="width: 30%; height: 228px; padding: 0px; background: rgb(34, 25, 77); position: relative; overflow: hidden;"
    />
    <div
      style="width: 70%; padding: 0px; position: relative; overflow: hidden;"
    >
      <div
        class="rc-saturation"
        style="background: rgb(43, 0, 255);"
      >
        <div
          class="rc-saturation__white"
          style="background: linear-gradient(to right, rgb(255, 255, 255), rgba(255, 255, 255, 0));"
        >
          <div
            class="rc-saturation__black"
            style="background: linear-gradient(to top, rgb(0, 0, 0), rgba(0, 0, 0, 0));"
          />
          <div
            class="rc-saturation__pointer"
            style="top: 70%; left: 66.66666666666667%;"
          >
            <div
              class="rc-google__pointer-circle"
              style="background: rgb(34, 26, 77);"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      style="margin: auto; width: 95%;"
    >
      <div
        class="flexbox-fix"
        style="display: flex; box-sizing: border-box; height: 52px; padding-top: 22px;"
      >
        <div
          style="height: 8px; position: relative; margin: 0px 16px; width: 100%;"
        >
          <div
            class="rc-hue-control"
            style="border-radius: 4px;"
          >
            <div
              class="rc-hue-control__container"
              style="border-radius: 4px; background: linear-gradient(to right, rgb(255, 0, 0) 0%, rgb(255, 255, 0) 17%, rgb(0, 255, 0) 33%, rgb(0, 255, 255) 50%, rgb(0, 0, 255) 67%, rgb(255, 0, 255) 83%, rgb(255, 0, 0) 100%);"
            >
              <div
                class="rc-hue-control__pointer"
                style="left: 69.44444444444443%;"
              >
                <div
                  class="rc-google__pointer"
                  style="background: rgb(43, 0, 255);"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="rc-google__fields"
      >
        <div
          class="rc-google__fields-body"
        >
          <div
            class="rc-google__field-row rc-google--primary"
          >
            <div
              class="rc-editable-input"
            >
              <input
                class="rc-editable-input__input"
                id="rc-editable-input-1"
                spellcheck="false"
                value="#22194D"
              />
              <label
                class="rc-editable-input__label"
                for="rc-editable-input-1"
              >
                hex
              </label>
            </div>
          </div>
          <div
            class="rc-google__field-row rc-google--secondary"
          >
            <div
              class="rc-google__field"
            >
              <div
                class="rc-editable-input"
              >
                <input
                  class="rc-editable-input__input"
                  id="rc-editable-input-2"
                  spellcheck="false"
                  value="34, 25, 77"
                />
                <label
                  class="rc-editable-input__label"
                  for="rc-editable-input-2"
                >
                  rgb
                </label>
              </div>
            </div>
            <div
              class="rc-google__field"
            >
              <div
                class="rc-editable-input"
              >
                <input
                  class="rc-editable-input__input"
                  id="rc-editable-input-3"
                  spellcheck="false"
                  value="250°, 67%, 30%"
                />
                <label
                  class="rc-editable-input__label"
                  for="rc-editable-input-3"
                >
                  hsv
                </label>
              </div>
            </div>
            <div
              class="rc-google__field"
            >
              <div
                class="rc-editable-input"
              >
                <input
                  class="rc-editable-input__input"
                  id="rc-editable-input-4"
                  spellcheck="false"
                  value="250°, 50%, 20%"
                />
                <label
                  class="rc-editable-input__label"
                  for="rc-editable-input-4"
                >
                  hsl
                </label>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`GoogleFields renders correctly 1`] = `
<DocumentFragment>
  <div
    class="rc-google__fields"
  >
    <div
      class="rc-google__fields-body"
    >
      <div
        class="rc-google__field-row rc-google--primary"
      >
        <div
          class="rc-editable-input"
        >
          <input
            class="rc-editable-input__input"
            id="rc-editable-input-9"
            spellcheck="false"
            value="#FF0000"
          />
          <label
            class="rc-editable-input__label"
            for="rc-editable-input-9"
          >
            hex
          </label>
        </div>
      </div>
      <div
        class="rc-google__field-row rc-google--secondary"
      >
        <div
          class="rc-google__field"
        >
          <div
            class="rc-editable-input"
          >
            <input
              class="rc-editable-input__input"
              id="rc-editable-input-10"
              spellcheck="false"
              value="255, 0, 0"
            />
            <label
              class="rc-editable-input__label"
              for="rc-editable-input-10"
            >
              rgb
            </label>
          </div>
        </div>
        <div
          class="rc-google__field"
        >
          <div
            class="rc-editable-input"
          >
            <input
              class="rc-editable-input__input"
              id="rc-editable-input-11"
              spellcheck="false"
              value="0°, 100%, 100%"
            />
            <label
              class="rc-editable-input__label"
              for="rc-editable-input-11"
            >
              hsv
            </label>
          </div>
        </div>
        <div
          class="rc-google__field"
        >
          <div
            class="rc-editable-input"
          >
            <input
              class="rc-editable-input__input"
              id="rc-editable-input-12"
              spellcheck="false"
              value="0°, 100%, 50%"
            />
            <label
              class="rc-editable-input__label"
              for="rc-editable-input-12"
            >
              hsl
            </label>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`GooglePointer renders correctly 1`] = `
<DocumentFragment>
  <div
    class="rc-google__pointer"
    style="background: rgb(43, 0, 255);"
  />
</DocumentFragment>
`;

exports[`GooglePointerCircle renders correctly 1`] = `
<DocumentFragment>
  <div
    class="rc-google__pointer-circle"
    style="background: rgb(34, 26, 77);"
  />
</DocumentFragment>
`;
